--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="title_padding">10dp</dimen>
+    <dimen name="detail_page_padding">10dp</dimen>
+    <dimen name="details_page_text_padding">10dp</dimen>
 </resources>
