--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -49,12 +49,15 @@
     <TextView
         android:id="@+id/errorText"
         android:layout_width="wrap_content"
+        android:padding="@dimen/title_padding"
+        android:gravity="center_horizontal"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:textAppearance="?android:textAppearanceLarge"
         android:text="@string/error"
         android:visibility="gone"
-        android:textColor="@color/header_background_color"
+        android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
