--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -5,7 +5,7 @@
     android:background="@color/white"
     android:layout_height="match_parent">
 
-    <ListView
+    <com.android.rakuten.view.CustomListView
         android:id="@+id/listImages"
         android:layout_width="match_parent"
         android:layout_height="0dp"
