--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="title_padding">10dp</dimen>
     <dimen name="detail_page_padding">10dp</dimen>
     <dimen name="details_page_text_padding">10dp</dimen>
+    <dimen name="bottom_title_padding">20dp</dimen>
 </resources>
